<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.meagain.hw2.EditActivity">

    <TextView
        android:text="@string/name_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="21dp"
        android:id="@+id/name_text_view" />

    <TextView
        android:text="@string/description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextView"
        android:layout_below="@+id/name_edit_text"
        android:layout_alignLeft="@+id/name_text_view"
        android:layout_alignStart="@+id/name_text_view" />

    <EditText
        android:text="@string/blank_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/description_edit_text"
        android:layout_below="@+id/TextView"
        android:layout_alignLeft="@+id/TextView"
        android:layout_alignStart="@+id/TextView"
        android:layout_alignRight="@+id/name_edit_text"
        android:layout_alignEnd="@+id/name_edit_text"
        android:maxLength="1000"
        android:minHeight="82dp" />

    <TextView
        android:text="@string/genre_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_edit_text"
        android:layout_alignLeft="@+id/description_edit_text"
        android:layout_alignStart="@+id/description_edit_text"
        android:id="@+id/textView4" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_dropdown"
        android:layout_below="@+id/description_edit_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/year_edit_text"
        android:layout_alignStart="@+id/year_edit_text"
        android:entries="@array/generes" />

    <TextView
        android:text="@string/rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genre_dropdown"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView5" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/year_edit_text"
        android:layout_alignStart="@+id/year_edit_text"
        android:id="@+id/rating_seek_bar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:progress="1"
        android:max="5" />

    <TextView
        android:text="@string/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_below="@+id/rating_seek_bar"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="11dp" />

    <TextView
        android:text="@string/imdb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/year_edit_text"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:text="@string/blank_text"
        android:ems="10"
        android:id="@+id/imdb_edit_text"
        android:layout_below="@+id/year_edit_text"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_text"
        android:ems="10"
        android:id="@+id/year_edit_text"
        android:inputType="number"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/imdb_edit_text"
        android:layout_alignStart="@+id/imdb_edit_text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/blank_text"
        android:ems="10"
        android:id="@+id/name_edit_text"
        android:textAlignment="center"
        android:maxLength="50"
        android:layout_alignBaseline="@+id/name_text_view"
        android:layout_alignBottom="@+id/name_text_view"
        android:layout_toRightOf="@+id/TextView"
        android:layout_toEndOf="@+id/TextView" />

    <Button
        android:text="@string/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveThisMovieButtonClicked"
        android:id="@+id/save_movie_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
