<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.meagain.hw2.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/add_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="127dp"
            android:id="@+id/add_movie_button"
            android:onClick="addMovieButtonClicked"
            android:fontFamily="sans-serif-medium"
            android:typeface="normal" />

        <Button
            android:text="@string/edit_string"
            android:onClick="editMovieButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_movie_button"
            android:layout_alignLeft="@+id/add_movie_button"
            android:layout_alignStart="@+id/add_movie_button"
            android:layout_marginTop="21dp"
            android:id="@+id/edit_button"
            android:fontFamily="sans-serif-medium"
            android:typeface="normal" />

        <Button
            android:text="@string/delete_movie_string"
            android:onClick="deletebuttonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:id="@+id/delete_button"
            android:layout_below="@+id/edit_button"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:typeface="normal" />

        <Button
            android:text="@string/show_list_by_year_text"
            android:onClick="showListByYearButtonClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/show_by_year_button"
            android:layout_below="@+id/delete_button"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:typeface="normal" />

        <Button
            android:text="@string/show_list_by_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/show_by_year_button"
            android:onClick="showListByRatingButtonClicked"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:id="@+id/show_by_rating_button"
            android:fontFamily="sans-serif-medium"
            android:typeface="normal" />

    </LinearLayout>

</RelativeLayout>
