<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_display_list_year"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.meagain.hw2.DisplayListActivity">

    <TextView
        android:text="@string/display_movies_by_year_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/finishButton"
        android:layout_toLeftOf="@+id/finishButton"
        android:layout_toStartOf="@+id/finishButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/first"
            android:layout_alignTop="@+id/prev_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/first_button"
            android:layout_alignRight="@+id/imdbTextView"
            android:layout_weight="1"
            android:onClick="firstButtonClicked"/>

        <ImageView
            android:layout_width="wrap_content"
            app:srcCompat="@drawable/previous"
            android:layout_alignTop="@+id/finishButton"
            android:id="@+id/prev_button"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/finishButton"
            android:layout_toRightOf="@+id/imdbTextView"
            android:layout_toEndOf="@+id/imdbTextView"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="prevButtonClicked"
            tools:ignore="ObsoleteLayoutParam"
            android:contentDescription="" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignTop="@+id/finishButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/next"
            android:layout_alignTop="@+id/finishButton"
            android:layout_toRightOf="@+id/finishButton"
            android:id="@+id/next_button"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_weight="1"
            android:onClick="nextButtonClicked"
            android:contentDescription="" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/last"
            android:layout_alignTop="@+id/next_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/last_button"
            android:layout_weight="1"
            android:onClick="lastButtonClicked"
            android:contentDescription="" />

    </LinearLayout>

    <Button
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="finishButtonClicked"
        android:id="@+id/finishButton" />

    <TextView
        android:text="@string/title_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/blank_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextView"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:text="@string/description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView20" />

    <TextView
        android:text="@string/blank_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionTextView"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <TextView
        android:text="@string/genre_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView22" />

    <TextView
        android:text="@string/blank_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:id="@+id/genreTextView" />

    <TextView
        android:text="@string/rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView24" />

    <TextView
        android:text="@string/blank_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genreTextView"
        android:layout_alignLeft="@+id/genreTextView"
        android:layout_alignStart="@+id/genreTextView"
        android:id="@+id/ratingTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView24"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView26" />

    <TextView
        android:text="@string/blank_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView26"
        android:layout_alignLeft="@+id/ratingTextView"
        android:layout_alignStart="@+id/ratingTextView"
        android:id="@+id/yearTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/imdb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView26"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView28" />

    <TextView
        android:text="@string/blank_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yearTextView"
        android:layout_alignLeft="@+id/yearTextView"
        android:layout_alignStart="@+id/yearTextView"
        android:id="@+id/imdbTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
